# rmgr-identify

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/rmgr/: detect-compiler.h  detect-runtime.h  identify-compiler.h  identify-runtime.h
tests/: android-make.cmd  mingw-clang-i686.cmake  mingw-clang-x86_64.cmake  mingw-gcc-i686.cmake  mingw-gcc-x86_64.cmake  rmgr-detect-compiler-tests.cpp  rmgr-detect-runtime-tests.cpp  rmgr-detect-tests.cpp  rmgr-identify-c-runtime.c  rmgr-identify-compiler-tests.cpp  rmgr-identify-compiler.cpp  rmgr-identify-cpp-runtime.cpp  rmgr-identify-runtime-tests.cpp  rmgr-identify-tests.cpp  rmgr-identify-tests.h
